name:                reflex-arc
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Arc
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , errors
                     , ghcjs-dom
                     , random
                     , reflex
                     , reflex-dom >= 0.2 && < 0.3
                     , reflex-dom-contrib
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
  hs-source-dirs:      src

executable ReflexArc
  main-is: Main.hs
  build-depends: base >= 4.8 && < 4.9
               , bytestring
               , ghcjs-dom
               , reflex
               , reflex-arc
               , reflex-dom
               , reflex-dom-contrib
               , text
  hs-source-dirs: exec
  default-language: Haskell2010
